Fixed Button Spacing

--- a/artstyle.css
+++ b/artstyle.css
@@ -21,12 +21,6 @@ img{
     width: 20vw;
     height:auto;
 }
-/* #tall{
-    height: 100vh;
-}
-#short{
-    width: 80%;
-} */
 li{
     list-style-type: square;
 }
